--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.0",
   "description": "Generates a hash for each item of an array. Useful for generating deterministic React keys. ",
   "main": "index.js",
+  "browser": "index.js",
   "module": "lib/index.js",
   "scripts": {
     "test": "jest"
